add modular prompt system with 46-72% token savings across pipeline stages

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ OPENROUTER_FALLBACK=your_fallback_openrouter_api_key
 
 # Optional: PostgreSQL for long-term logging
 DATABASE_URL=postgresql://user:password@host:port/database
+
+# Optional: Use modular prompt system (set to false to use legacy systemPrompt.js)
+USE_MODULAR_PROMPTS=true
