fix: identity-first prompt assembly, add glm 4.6, standardize module coverage
- reorder assembleFullAgent() to put identity before rules (fixes schizophrenic behavior)
- add glm 4.6 exacto to model presets, remove glm 4.7 from llmClient
- add contextRules to chat path, explorationRules+contextRules to edit mode
- add personality framing to exploration/context rules modules
- add doc sportello identity to router for consistent voice
- add kebab-case file naming convention to fileOperations

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -546,6 +546,13 @@
       "description": "neon saber dueling arcade",
       "collection": "arcade-games",
       "hidden": false
+    },
+    "krispy-peaks-affair": {
+      "title": "The Krispy Peaks Affair",
+      "icon": "📖",
+      "description": "noir detective mystery story",
+      "collection": "stories-content",
+      "hidden": false
     }
   }
 }
