--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -558,7 +558,7 @@
       "title": "Thought Void",
       "icon": "🕳️",
       "description": "drag thoughts into the void",
-      "collection": "utilities-apps",
+      "collection": "featured",
       "hidden": false
     }
   }
