feat: add agentic visualization to arcade
Adds a new interactive visualization to the arcade that displays project structure and history.

- Creates the HTML, CSS, and JS files for the visualization.
- Implements a force-directed graph, tree, and circular layouts.
- Uses project collections and commit history as the data source.
- Integrates the new visualization into the project's metadata.

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -59,6 +59,12 @@
       "collection": "meta",
       "hidden": false
     },
+    "agentic-visualization": {
+      "title": "Agentic Visualization",
+      "icon": "🕸️",
+      "description": "Interactive visualization of project structure and history.",
+      "collection": "meta"
+    },
     "double_dragon_beatem_up": {
       "title": "Double Dragon Beatdown",
       "description": "Side-scroll co-op brawler",
