--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "node services/responseHealing.test.js"
   },
   "dependencies": {
     "@octokit/rest": "^20.0.2",
