--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@octokit/rest": "^20.0.2",
     "axios": "^1.6.0",
     "axios-retry": "^4.5.0",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
